Closed
Bug 243411
Opened 22 years ago
Closed 21 years ago
Painting problems in bookmarks toolbar when moving bookmarks out of folders
Categories
(Camino Graveyard :: Bookmarks, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: cleversticks, Assigned: sfraser_bugs)
Details
Attachments
(1 file)
|
11.12 KB,
image/png
|
Details |
User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.7) Gecko/20040511 Camino/0.8b
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.7) Gecko/20040511 Camino/0.8b
Moving bookmarks and folders in and out of other folders in the bookmarks
toolbar works fine. However, when I move bookmarks or folders out of a folder
in the toolbar, the one I move ends up overlapping bookmark(s) to its right.
The toolbar doesn't redraw correctly.
Reproducible: Always
Steps to Reproduce:
1. Have several bookmarks and/or folders in your bookmark toolbar.
2. Drag one of them into another folder. The bookmark toolbar will update, and
will be one item shorter.
3. Drag the same item back into the top level of the toolbar, anywhere but the end.
Actual Results:
The visible length of the bookmarks in the toolbar doesn't update this time, so
the one you just dragged in visually covers the next bookmarks to the right.
Expected Results:
The toolbar should have updated correctly, not overlapping anything.
Confirmed using 2004050308 (v0.8b).
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Assignee | ||
Comment 4•21 years ago
|
||
Fixed: we needed to call setNeedsDisplay:YES when we reflow items, not just when the bar height
changes.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•