Fix bug 243411 - painting problems on bookmarks toolbar when moving items around, because we would only call [setNeedsDisplay] when changing the bar height.

Also clarified added a [bookmarkChanged:] method to BookmarkButton, rather than overloading [setBookmarkItem:]. This allows us to be more selective about reflowing the bookmarks toolbar (i.e. not when just an icon changes).